<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_satz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/titlesatz"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="@dimen/dimentionIP" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="3"
            android:textAlignment="center"
            android:textColor="@color/y"
            android:textSize="@dimen/dimentionIP"></EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_record_d"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/title"
            android:text="@string/button_record_d" >
        </Button>
        <Button
            android:id="@+id/button_player_d"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/title"
            android:text="@string/button_player_d" >
        </Button>

        </LinearLayout>

        <TextView
            android:id="@+id/title_macaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/titletranslate"
            android:textAlignment="center"
            android:textColor="@color/title"
            android:textSize="@dimen/dimentionIP" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="3"
            android:textAlignment="center"
            android:textColor="@color/g"
            android:textSize="@dimen/dimentionIP"></EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_record_r"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/title"
                android:text="@string/button_record_r" >
            </Button>
            <Button
                android:id="@+id/button_player_r"
                android:layout_width="140dp"
                android:layout_height="60dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:textColor="@color/title"
                android:text="@string/button_player_r" >
            </Button>

        </LinearLayout>




        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="40dp"
            android:text="@string/save_string"
            android:textColor="@color/title"></Button>

        <Button
            android:id="@+id/button_delete"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:text="@string/delete_string"
            android:textColor="@color/title"></Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout"
        android:layout_marginTop="105dp"
        android:orientation="horizontal" />

</RelativeLayout>