<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    android:background="@drawable/background5"
    android:weightSum="1">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="#262629">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        >

        <SeekBar
            android:id="@+id/seekBar"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            android:max="10"
            android:progress="3"

            />
        <SeekBar
            android:id="@+id/seekBar2"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"

            android:max="10"
            android:progress="3"

            />

    <TextView
        android:id="@+id/textname_privat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@color/y"
        android:textAlignment="center"
        android:text="@string/privat"
        android:textSize="@dimen/dimentionIP"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/layout_bottom_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:background="#222222"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            android:id="@+id/button_load"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/load" >
        </Button>
        <Button
            android:id="@+id/button_save"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/save" >
        </Button>
    </LinearLayout>

    <TextView
        android:id="@+id/textname_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/y"
        android:textAlignment="center"
        android:text="@string/share"
        android:textSize="@dimen/dimentionIP"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/layout_bottom_bar2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:background="#222222"
        android:clickable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            android:id="@+id/button_load_from_file"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/load" >
        </Button>
        <Button
            android:id="@+id/button_save_to_file"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:text="@string/save" >
        </Button>
    </LinearLayout>


    </LinearLayout>
</LinearLayout>